# cwal

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  flake.nix  result
.github/release/: release.toml
.github/workflows/: release.yml
include/: backend.h  core.h  image.h  magickwand.h  version.h.in
shell/bash/: cwal
shell/fish/: cwal.fish
shell/zsh/: _cwal
src/: backend.c  colors.c  image.c  main.c
src/app/: cli.c  cli.h  config.c  config.h  main.c
src/backends/: backend.c  backend.h  cwal.c  libimagequant.c  lua_backend.c  lua_backend.h
src/color/: color_convertion.c  color_convertion.h  color_operation.c  color_operation.h  colors.c  colors.h  image.c  image.h
src/modules/cache/: cache.c  cache.h
src/modules/hooks/: hooks.c  hooks.h
src/modules/reload/: reload.c  reload.h
src/modules/template/: template.c  template.h
src/modules/theme/: themes.c  themes.h
src/utils/: cache.c  cli.c  cli.h  color_convertion.c  color_operation.c  color_operation.h  config.c  config.h  format_conversion.c  format_conversion.h  hooks.c  path.c  path.h  reload.c  template.c  themes.c  themes.h  utils.c  utils.h
templates/: colors-foot.ini  colors-kitty.conf  colors-obsidian.css  colors-quickshell.qml  colors-vscode.json  colors.Xresources  ghostty.conf
